# maidenless

./: #test.c#  .gitignore  README.md  a.out  meson.build  mkdocs.yml  test.c
base_ze/: main.toml  plane.glb  plant.glb  playground.glb
docs/: index.md  quickstart.md
source/: maidenless.c
source/client/: cl_client.c  cl_client.h  cl_input.h
source/game/: g_collision.c  g_game.c  g_game.h
source/shaders/: gbuffer.frag.glsl  gbuffer.vert.glsl  global_ubo.glsl  shading.comp.glsl
source/vk/: vk.c  vk.h  vk_gbuffer.c  vk_private.h  vk_shading.c
